<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">android-todo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="create_task">CREATE TASK</string>
    <string name="edit_task">EDIT TASK</string>
    <string name="date">Date</string>
    <string name="calendar">Calendar</string>
    <string name="time">Time</string>
    <string name="time_hint">hh:mm</string>
    <string name="clock">Clock</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date_hint">mm/dd/yyyy</string>
    <string name="title_hint">Enter task name...</string>
    <string name="description_hint">Enter a brief description...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_note">Add Note</string>
    <string name="note_hint">Enter a note for this task...</string>
    <string name="add_subtask">Add Subtask</string>
    <string name="edit_subtask">Edit Subtask</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="not_done">Not Done</string>
    <string name="calendar_title">Calendar</string>
    <string name="enter_note">Enter Note:</string>
    <string name="edit_note">Edit Note</string>
    <string name="go_back">Go Back</string>
    <string name="add">Add</string>
    <string name="edit_list">Tap a task to edit</string>
    <string name="title_activity_view">View Activity</string>
    <string name="task">Task</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_tasks">Delete Tasks</string>
</resources>
