<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/header"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="2dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Switch
            android:id="@+id/status"
            android:textOff="@string/not_done"
            android:textOn="@string/done"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/taskDate"
            android:hint="@string/date_hint"
            android:inputType="date"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/calendar"
                android:text="@string/calendar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
         </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/taskTime"
            android:hint="@string/time_hint"
            android:inputType="time"
            android:layout_weight="0.9"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/ampm"
            android:entries="@array/timeOfDay"
            android:layout_weight="0.6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/time"
                android:text="@string/clock"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/title"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="0.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/taskTitle"
                android:hint="@string/title_hint"
                android:layout_weight="2.7"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/description"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/taskDescription"
                android:hint="@string/description_hint"
                android:gravity="top|left"
                android:inputType="textMultiLine"
                android:lines="5"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
    <RelativeLayout
        android:orientation="horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/addNote"
            android:text="@string/add_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/addSubtask"
            android:text="@string/add_subtask"
            android:layout_alignParentRight="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/save"
                android:text="@string/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
