<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/date"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/dateView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="0.75"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/timeView"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.25"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_marginBottom="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/task"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="1.2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/taskTitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <TextView
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/taskDescription"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/edit"
            android:text="@string/edit"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/ok"
            android:text="@string/ok"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>